# kanji

./: Cargo.toml  README.md
data/: README.md
src/: lib.rs  main.rs
src/custom_error/: mod.rs
src/dictionary/: mod.rs  repository.rs
src/kana/: mod.rs  sets.rs  tokens.rs
src/printer/: mod.rs
src/repository/: mod.rs
src/types/: mod.rs
