[package]
name = "kanji"
version = "0.1.0"
authors = ["vkstrm"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"

kanabake = "0.1.0"
prettytable-rs = "^0.8"

[dependencies.rusqlite]
version = "0.25.1"
features = ["bundled"]